unpackaged/objects/WorkIt2__Case_Time_Total__c.object
<CustomObject>
    <description>Stores the total work time for a case or another object.</description>
    <fields>
        <fullName>WorkIt2__Business_Hours__c</fullName>
        <formula>floor(WorkIt2__Calculated_Business_Seconds__c / 3600 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business-Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Minutes__c</fullName>
        <formula>FLOOR(MOD(WorkIt2__Calculated_Business_Seconds__c ,3600) / 60 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business-Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Seconds__c</fullName>
        <formula>MOD( WorkIt2__Calculated_Business_Seconds__c ,60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business-Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Time_In_Hours__c</fullName>
        <formula>WorkIt2__Calculated_Business_Seconds__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Time in Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Time_In_Minutes__c</fullName>
        <formula>WorkIt2__Calculated_Business_Seconds__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Time in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Time_In_Seconds__c</fullName>
        <formula>WorkIt2__Calculated_Business_Seconds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Time in Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Time__c</fullName>
        <formula>TEXT(WorkIt2__Business_Hours__c) &amp; &quot;h &quot; &amp; TEXT(WorkIt2__Business_Minutes__c) &amp; &quot;m &quot; &amp; TEXT(WorkIt2__Business_Seconds__c) &amp; &quot;s &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Calculated_Business_Seconds__c</fullName>
        <label>WINTERNAL: Calculated Business Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Calculated_Seconds__c</fullName>
        <label>WINTERNAL: Calculated Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Color__c</fullName>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Violet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Hours__c</fullName>
        <formula>floor(WorkIt2__Calculated_Seconds__c / 3600 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Minutes__c</fullName>
        <formula>FLOOR(MOD(WorkIt2__Calculated_Seconds__c ,3600) / 60 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__ObjName__c</fullName>
        <label>Related Object Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Overtime_Status__c</fullName>
        <formula>CASE( WorkIt2__Color__c , 
&quot;Red&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_01.png&quot;, &quot;Red&quot;) ,
&quot;Orange&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_02.png&quot;, &quot;Orange&quot;) ,
&quot;Yellow&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_03.png&quot;, &quot;Yellow&quot;) ,
&quot;Blue&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_05.png&quot;, &quot;Blue&quot;) ,
&quot;Violet&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_06.png&quot;, &quot;Violet&quot;) ,
IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_04.png&quot;, &quot;Green&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overtime Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Seconds__c</fullName>
        <formula>MOD( WorkIt2__Calculated_Seconds__c ,60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Time_In_Hours__c</fullName>
        <formula>WorkIt2__Calculated_Seconds__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Time_In_Minutes__c</fullName>
        <formula>WorkIt2__Calculated_Seconds__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Time_In_Seconds__c</fullName>
        <formula>WorkIt2__Calculated_Seconds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Time__c</fullName>
        <formula>TEXT(WorkIt2__Hours__c) &amp; &quot;h &quot; &amp; TEXT(WorkIt2__Minutes__c) &amp; &quot;m &quot; &amp; TEXT(WorkIt2__Seconds__c) &amp; &quot;s &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>Text</type>
    </fields>
    <label>Time Total</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Time Total Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Totals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>